--- a/1.html
+++ b/1.html
@@ -5,7 +5,7 @@
 <meta charset="utf-8">
 </head>
 <body>
-<ol>
+
 
 <h1>헬스</h1>
 <br><br><br>
@@ -16,6 +16,6 @@
 벌써 내일 운동할 생각에 신난다.<br><br><br>
 <img src="health.jpg"width="63%">
 
-<a href="0.html">  back</a>
+<a href="index.html">  back</a>
 
 </body>
