--- a/2.html
+++ b/2.html
@@ -3,4 +3,4 @@
 그래서 읽었는데 꽤 유익하고 재밌었고 그동안 관심을 가지지 않고 재미없는것으로 타이틀을 씌운것같다. <br>
 아직은 한권도 완벽하게 읽은책은 없지만 내가 처음으로 자초해서 책을 읽은거 같다.<br>
 앞으로 좀더 관심을 가지고 더많이 읽어 나를 발전시켜야겠다.<p>
-              <a href="0.html">back</a>
+              <a href="index.html">back</a>
